--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "atha/ci3-app",
+    "name": "atha/codeigniter3-app",
     "description": "Just a simple codeigniter3 app",
     "keywords": ["php", "ci", "codeigniter"],
     "license": "None",
